2007-02-17  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDb/_GrampsDbWriteXML.py: add non-gtk xml writer
	* src/GrampsDb/__init__.py: export non-gtk writer
	* src/GrampsDb/_GrampsDbExceptions.py: add WriteFailure exception
	* src/GrampsDb/_LongOpStatus.py: protect against div by zero
	* src/GrampsDb/_ProgressMonitor.py: workaround gtk issues
	* src/ProgressDialog.py: work around gtk issues
	* src/GrampsDbUtils/_WriteXML.py: make gtk wrapper for non-gtk version
	
2007-02-17  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/ViewManager.py: add progress monitor
	* src/GrampsDb/_GrampsDbBase.py: add get_length to cursors
	* src/GrampsDb/_LongOpStatus.py: add __del__ method
	* src/GrampsDb/_ProgressMonitor.py: add class params
	* src/GrampsDb/_GrampsInMemDB.py: add get_length to cursors
	* src/GrampsDb/_CursorIterator.py: use get_length methods
	* src/GrampsDb/_GrampsBSDDB.py: add get_length to cursors
	* src/DisplayState.py: add progress monitor
	* src/DisplayModels/_PeopleModel.py: use LongOpStatus
	* src/ProgressDialog.py: fix show method

2007-02-17  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_Report.py: remove unused progress bar functions

2007-02-16  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/data/mainX.css: enable formatted notes on narrative web
	* src/plugins/NarrativeWeb.py: enable formatted notes on narrative web
	* src/MarkupText.py: properly reset xml generator output: fix #924
	* src/ManagedWindow.py: enable accelerators in editor windows 
	* src/Editors/_EditPrimary.py: enable accelerators in editor windows
	* src/Editors/_EditSecondary.py: enable accelerators in editor windows
	* src/Editors/_EditReference.py: enable accelerators in editor windows
	* src/DisplayTabs/_NoteTab.py: enable accelerators in editor windows 
	* src/DisplayTabs/_ButtonTab.py: enable accelerators in editor windows
	* src/DisplayTabs/_GrampsTab.py: enable accelerators in editor windows
