@@ -92,13 +92,6 @@ class EditSecondary(ManagedWindow.ManagedWindow):
                           self._switch_page_on_dnd,
                           notebook,
                           page_no)
-            try:
-                self.window.get_toplevel().add_accel_group(child.accel_group)
-            except AttributeError:
-                pass
-
-        self.register_accelerator('<Control>Page_Down', notebook.next_page)
-        self.register_accelerator('<Control>Page_Up', notebook.prev_page)
 
     def _switch_page_on_dnd(self, widget, context, x, y, time, notebook, page_no):
         if notebook.get_current_page() != page_no:
