@@ -1,3 +1,13 @@
+2007-02-16  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/DisplayTabs/_NoteTab.py: accelerators replaced with key-press
+	signal handler.
+	* src/DisplayTabs/_ButtonTab.py: accelerators removed; wrong concept.
+	* src/DisplayTabs/_GrampsTab.py: accelerators removed; wrong concept.
+	* src/Editors/_EditPrimary.py: accelerators removed; wrong concept.
+	* src/Editors/_EditSecondary.py: accelerators removed; wrong concept.
+	* src/Editors/_EditReference.py: accelerators removed; wrong concept.
+	* src/ManagedWindow.py: accelerators removed; wrong concept.
+
 2007-02-17  Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
 	* src/GrampsDb/_GrampsDbWriteXML.py: add non-gtk xml writer
 	* src/GrampsDb/__init__.py: export non-gtk writer
